# slacker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MULTI_WORKSPACE_SETUP.md  docker-compose.yml  release-please-config.json  slack-app-manifest.yaml  todo.md  workspaces.example.yaml
.github/workflows/: docker-build.yml  release-please.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/config/: config.rs  mod.rs  workspaces.rs
app/src/core/: bot_status.rs  mod.rs  server.rs  state.rs
app/src/database/: connect.rs  mod.rs  seed.rs
app/src/handlers/: admins.rs  auth.rs  mod.rs  tasks.rs  workspaces.rs
app/src/middlewares/: auth.rs  user.rs
app/src/models/: change.rs  message.rs  mod.rs  person.rs  task.rs  workspace_admin.rs  workspace_link.rs  workspace_settings.rs
app/src/repos/: changes.rs  messages.rs  mod.rs  persons.rs  tasks.rs  workspace_admins.rs  workspace_links.rs  workspace_settings.rs
app/src/routes/: admins.rs  auth.rs  mod.rs  tasks.rs  workspaces.rs
app/src/services/: mod.rs  slack_service.rs  user.rs
app/src/sockets/: mod.rs  slack_bot.rs
app/src/utils/: crypto.rs  encryption.rs  global_error_handler.rs  jwt.rs  mod.rs  response.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: slack-app-manifest.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountSwitcher.tsx  AuthCallback.tsx  LoginPage.tsx  NoAccessPage.tsx  ProjectsPage.tsx  SetupWizard.tsx  TaskBoard.tsx  TaskModal.tsx  ThemeToggle.tsx  UserMenu.tsx  WorkspaceSettingsPage.tsx  WorkspaceSwitcher.tsx
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret-workspaces.yaml  secret.yaml  service.yaml  serviceaccount.yaml
migration/: Cargo.toml  cargo.toml
migration/src/: lib.rs  m20251214_173322_first_migration.rs  m20260106_000000_workspace_links.rs  m20260106_010000_add_active_workspace.rs  m20260106_020000_workspace_settings.rs  m20260109_000000_add_assigned_by.rs  m20260109_010000_workspace_admins.rs
tests/: tests.http
tools/: docker-compose.yml
(+2 files in other folders)
