[package]
name = "slacker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
migration = { path = "../migration" }
nanoid = "0.4"
sea-orm = { version = "2.0.0-rc", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { workspace = true }
