[package]
name = "slacker"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22"
chrono = "0.4.42"
dotenvy = "0.15"
envy = "0.4"
futures-util = "0.3.31"
google-oauth = "1.0.17"
jsonwebtoken = "9"
migration = { path = "../migration" }
nanoid = "0.4"
rand = "0.8"
reqwest = { version = "0.12.27", features = ["json"] }
sea-orm = { version = "2.0.0-rc", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.17"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
